--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "charge-account",
-  "version": "0.1.0",
+  "name": "bbb",
+  "version": "b",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -9,9 +9,14 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.44",
+    "@types/react-router-dom": "^5.3.3",
+    "dart-sass": "^1.25.0",
+    "node-sass": "npm:dart-sass@^1.25.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
@@ -40,6 +45,11 @@
     ]
   },
   "devDependencies": {
-    "@types/react-dom": "^18.0.0"
-  }
+    "@types/react-dom": "^18.0.0",
+    "@types/styled-components": "^5.1.25",
+    "svg-sprite-loader": "^6.0.11"
+  },
+  "main": "b",
+  "author": "maple@qq.com <2793368228@qq.com>",
+  "license": "MIT"
 }
